fix site from becoming too large when rotated (mobile)

--- a/mobile.css
+++ b/mobile.css
@@ -2,7 +2,7 @@
     background-color: black;
     position: fixed;
     width: 100%;
-    height: 100px;
+    height: 45px;
     margin-top: -43px;
     padding-bottom: 5px;
     margin-left: -8px;
@@ -27,7 +27,7 @@
 .topnav h1 {
     margin-top: -6px;
     color: white;
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 h1 {
@@ -36,7 +36,6 @@ h1 {
 
 body {
     font-family: 'Noto Sans JP', sans-serif;
-    font-size: xx-large;
 }
 
 img {
